contacts-deployment/k8s/contact-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'aviasales2-deployment'
spec:
  replicas: 1
  selector:
    matchLabels:
      component: aviasales2
  template:
    metadata:
      labels:
        component: aviasales2
    spec:
        containers:
          - name: contacts-api
            image: hockeyegor/aviasales2
            ports:
              - containerPort: 8080
