contacts-deployment/k8s/contact-frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngcrmdev-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ngcrmdev
  ports:
    - port: 4200
      targetPort: 4200
